[package]
name = "pixelflut"
version = "0.1.0"
authors = ["j-brn <me@jbrn.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.4.0", features = ["default", "attributes"] }
image = "0.23.0-preview.0"